css/style.css
/* ... */
.btn-view-projects:hover {
  transform: translateY(-4px);
  background: #00e5ff;
  color: #000;
  box-shadow: 
      0 0 10px #00e5ff,
      0 0 20px #00e5ff,
      0 0 40px rgba(0,229,255,0.6);
}

.btn-lets-talk{
    border: 1px solid #18dae0;
    text-decoration: none;
    background-color: black;
    width: 100px;
    height: auto;
    border-radius: 5px;
    text-align: center;
    color: #18dae0;
    font-weight: bold;
    padding: 8px;
   
}
.btn-lets-talk:hover{
    color: white;
}
.home-cards-wrapper{
    display: flex;
    width: 100%;  
    gap: 1rem;
    margin-top: 5%;
    flex-wrap: wrap;
    
}
.home-cards{
    border: 1px solid #18dae0;
    width: 30%;
    height: auto;
    border-radius: 5px;
    padding-left: 10px;
    flex: 1;
    text-wrap: nowrap;
    transition: transform 0.3s ease;
}
.home-cards:hover{
    transform: translateY(-10px);
}
.home-cards p{
    margin: 0;
}
.highlights{
    color: #18dae0;
    font-size: 3rem;
    font-weight: bolder;
    margin: 0%;
    

}
.my-photo{
    grid-area: my-photo;
    display: flex;
    width: 80%;
    height: auto;
    border: 1px solid #18dae0;
    border-radius: 5px;
    justify-self: center; 
    align-self: center;
    margin-top: 5%;
}
.my-photo img{
    height: auto;
    width: 100%;
    object-fit: cover;
    border-radius: 5px;
    
}
/*   ABOUT ME   */
.profile-details{
    display: flex;
    gap: 1rem;
    flex-direction: column;
}
.profile-details p{
    margin: 2px;
}
.blue-dot{
    color: #18dae0;
    font-size: large;
}
.education{
    display: flex;
    gap: 1rem;
}
.vertical-line{
    margin-top: 2.5rem;
    background-color: #18dae0;
    height: auto;
    width: 1px;
    
}

/* SKILLS SECTION  */
.skills-wrapper-cards{
    display: flex;
    flex-direction: column;
    gap: 2rem;
}
.skills-cards{
    border: #18dae0 1px solid;
    border-radius: 10px;
    padding: 10px;
}

.skills-card-header{
    display: flex;
    gap: 1rem;
    color: #18dae0;
    font: 1em sans-serif;
}
.skills-card-header img{
    width: 40px;
    height: 40px;
}
.skills-items-wrapper{
    display: flex;
   
    flex-wrap: wrap;
    gap: 0.5rem;
    width: 100%;
}
.skills-items{
    margin-top: 2%;
    border: #18dae0 1px solid;
    width: auto;
    border-radius: 10px;
    color: #76b5c5;
    font-weight: bold;
    flex: 1;
    text-align: center;
    justify-content: center;
    white-space: nowrap;
    padding: 5px;
    transition: transform 0.3s ease;
}
.skills-items:hover{
     transform: translateY(-10px);
     color: white;
}
/*  PROJECTS   */
.projects-wrapper{
    display: flex;
    flex-direction: column;
    gap: 3rem;
}
.project{
    border: #18dae0 1px solid;
    display: flex;
    flex-wrap: wrap;
    gap: 1rem;
    width: 100%;
    border-radius: 10px;
    justify-items: center;
    padding: 10px;
    box-sizing: border-box;

    background: rgba(24, 218, 224, 0.08);
    backdrop-filter: blur(15px);
    -webkit-backdrop-filter: blur(15px);

    border: 1px solid rgba(24, 218, 224, 0.25);
    border-radius: 16px;

    box-shadow:
        0 8px 32px rgba(24, 218, 224, 0.08),
        inset 0 1px 0 rgba(255, 255, 255, 0.1);
}

.project-title{
    margin: 0px;
    font-size: 1.2rem;
}
.project img{
    width: 100%;
    height: auto;
    border-radius: 10px;
}
.project-buttons{
    width: 100%;
    display: flex;
    justify-content: center;
    gap: 1rem;
    align-items: center;
}

.live-btn{
    display: flex;
    justify-content: center;
    gap: 10px;
    text-decoration: none;
    background-color: #18d9e0d2;
    width: 152px;
    height: auto;
    border-radius: 5px;
    text-align: center;
    color: black;
    font-weight: bold;
    padding: 8px;
    color: #000000;
    font-weight: 600;
    cursor: pointer;
    transition: all 0.3s ease;
    overflow: hidden;

}
.live-btn img{
    height: 20px;
    width: 20px;
}
.live-btn a{
    color: #000;
    text-decoration: none;
}
.live-btn:hover {
  transform: translateY(-1px);
  background: #00e5ffbd;
  color: #000;
  box-shadow: 
      0 0 3px #00e5ff,
      0 0 5px #00e5ff,
      0 0 10px rgba(0,229,255,0.6);
}

.git-btn{
    width: 100%;
    color: #000;
    padding: 5px;
    border-radius: 5px;
    border: 1px white solid;
    text-align: center;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 10px;
    flex-direction: row;
}
.git-btn:hover{
    border-color: #18dae0;
    transform: translateY(-2px);
    cursor: pointer;
}
.project-icon-btn{
    display: flex;
    justify-self: center;
    align-items: center;
}
.git-btn a{
    color: white;
    text-decoration: none;
}
.live-btn{
    width: 100%;
}
.project p{
    padding: 2px;
    color: grey;
}
.project a{
    text-align: center;
}
.tech-stack{
    display: flex;
    gap: 0.8rem;
    list-style: none;
    padding: 0;
}
.tech-stack li{
    border: 1px solid gray;
    padding: 5px;
    border-radius: 10px;
    background: rgba(24, 218, 224, 0.08);
    border: 1px solid rgba(24, 218, 224, 0.2);

    backdrop-filter: blur(8px);
    -webkit-backdrop-filter: blur(8px);

    color: #18dae0;
    font-size: .85rem;
    font-weight: 500;

    transition: all .3s ease;
}
.projects-divider-line{
    margin: 0px;
    margin-bottom: 10px;
    border-color: #7a7777;
    
}



/*   RESUME    */
.btn-download-cv{
    
    text-decoration: none;
    background-color: #18dae0;
    height: 60px;
    border-radius: 5px;
    text-align: center;
    color: black;
    font-weight: bold;
    padding: 8px;
}
.btn-download-cv:hover{
    transform: translateY(-4px);
  background: #00e5ff;
  color: #000;
  box-shadow: 
      0 0 10px #00e5ff,
      0 0 20px #00e5ff,
      0 0 40px rgba(0,229,255,0.6);
}
.grey-paragraphs{
    margin-bottom: 50px;
}


/*   CONTACT    */

.form-wrapper{
    display: flex;
    flex-direction: column;
    width: 96%;
    height: auto;
    gap: 1rem;
    margin-bottom: 10px;
}
/* ... */

